# ImageCompresor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
compression_library/: CMakeLists.txt
compression_library/include/: BMPHeader.h  CompressorFactory.h  EncodedData.h  ICompressor.h  IDecoder.h  IEncoder.h  ImageCompressor.h  ImageDecoder.h  ImageEncoder.h  RawImageData.h
compression_library/src/: CompressorFactory.cpp  ImageCompressor.cpp  ImageDecoder.cpp  ImageEncoder.cpp
frontend/: CMakeLists.txt  MyFolderListModel.cpp  MyFolderListModel.h  MyRunnable .h  main.cpp  main.qml
utility/: CMakeLists.txt  Logger.h
utility/implementations/logger/: LogStream.cpp  LogStream.h  LoggerImpl.cpp  LoggerImpl.h
